# Pf2-scRNAseq

./: GSE178341.ipynb  Vanderbilt.ipynb  makefile  pyproject.toml
.github/workflows/: build.yml
pf2rnaseq/: gating.py  imports.py
pf2rnaseq/figures/: common.py  figureCA1.py  figureCC1.py  figureCITEseq4.py  figureCytokine1.py  figureLupus1.py
pf2rnaseq/figures/commonFuncs/: plotFactors.py  plotPaCMAP.py
pf2rnaseq/tests/: test_import.py  test_parafac2.py
